--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,24 +1,35 @@
 <ion-header>
   <ion-toolbar color="dark">
     <ion-title> {{titulo}} </ion-title>
+    <ion-icon name="add-circle" slot="end"></ion-icon>
   </ion-toolbar>
+
 </ion-header>
 
 <ion-content [fullscreen]="true" color="light">
+  <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)" >
+    <ion-refresher-content></ion-refresher-content>
+  </ion-refresher>
+
   <ion-list>
 
-    <ion-item lines="full" (click)="adicionadoToast()" *ngFor="let Produtos of listaProduto">
-      <ion-thumbnail slot="start">
-        <img [src]="Produtos.imagem"/>
-      </ion-thumbnail>
+      <ion-item lines="full"  *ngFor="let p of produtos">
+        <ion-item (click)="adicionaItem(p.idProduto)">
 
-      <ion-label>
-        <div>
-          <h1>{{Produtos.nome}}</h1>
-          <p>R$ {{Produtos.valor}}</p>
-        </div>
-      </ion-label>
-    </ion-item>
+          <ion-thumbnail slot="start">
+            <img class="imagemProduto" [src]="p.imagem"/>
+          </ion-thumbnail>
+
+          <ion-label>
+            <div>
+              <h1>{{p.nome}}</h1>
+              <p>{{p.descricao}}</p>
+              <p>R$ {{p.valor}}</p>
+            </div>
+          </ion-label>
+
+        </ion-item>
+      </ion-item>
 
   </ion-list>
 </ion-content>
