--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -1,6 +1,15 @@
 ion-item{
   ion-thumbnail{
     height:100%;
+    width:100px;
 
   }
+}
+.imagemProduto{
+ height: 80px;
+ width:100%;
+}
+ion-icon{
+  font-size: 50px;
+  margin-right: 10px;
 }
