--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,20 +1,20 @@
 <ion-tabs>
-
   <ion-tab-bar slot="bottom" color="dark">
+
     <ion-tab-button tab="tab1">
-      <ion-icon name="fast-food"></ion-icon>
+      <ion-icon [src]="burger"></ion-icon>
       <ion-label>Lanches</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab2">
-      <ion-icon name="reader"></ion-icon>
+      <ion-icon [src]="pedidos"></ion-icon>
       <ion-label>Pedidos</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab3">
-      <ion-icon name="cart"></ion-icon>
+      <ion-icon [src]="carrinho"></ion-icon>
       <ion-label>Carrinho</ion-label>
     </ion-tab-button>
-  </ion-tab-bar>
 
+  </ion-tab-bar>
 </ion-tabs>
