--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,21 +1,20 @@
 <ion-header>
   <ion-toolbar color="dark">
     <ion-title> {{titulo}} </ion-title>
-    <ion-icon name="add-circle" slot="end"></ion-icon>
+    <ion-icon name="add-circle" slot="end" (click)="teste()"></ion-icon>
   </ion-toolbar>
-
 </ion-header>
 
 <ion-content [fullscreen]="true" color="light">
+
   <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)" >
     <ion-refresher-content></ion-refresher-content>
   </ion-refresher>
 
-
   <ion-list>
-    <ion-item lines="full"  *ngFor="let p of produtos">
+    <ion-item lines="full"  *ngFor="let p of produtos" (click)="adicionaItem(p.idProduto, p.nome)">
 
-      <ion-item (click)="adicionaItem(p.idProduto, p.nome)">
+      <ion-item >
 
         <ion-thumbnail slot="start">
           <img class="imagemProduto" [src]="p.imagem"/>
