--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -51,7 +51,7 @@
 
 
   </ion-list >
-    <ion-button color="success" expand="full" size="large">FINALIZAR</ion-button>
+    <ion-button color="success" expand="full" size="large" (click)="pagamento()">FINALIZAR</ion-button>
     <ion-button color="danger" expand="full" tab="tab1" (click)="verifica()">CANCELAR PEDIDO</ion-button>
 
 
