adicionado modal pedidos, propriedade visualizar itens e excluir pedido pelo  modal

--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -7,14 +7,15 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
+  <!--
   <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)" >
     <ion-refresher-content></ion-refresher-content>
   </ion-refresher>
+-->
 
   <ion-list>
+    <ion-item lines="full" *ngFor="let pe of pedido" (click)="abrirModal(pe.codPedido, pe.valor, pe.cliente, pe.tipo)">
 
-
-    <ion-item lines="full" *ngFor="let pe of pedido" (click)="pedidoCliente(pe.codPedido, pe.valor, pe.cliente)">
       <ion-item lines="none">
         {{pe.cliente}}
       </ion-item>
@@ -26,3 +27,4 @@
   </ion-list>
 
 </ion-content>
+
