--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -11,7 +11,7 @@
       <ion-label>Pedidos</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab3" (click)="atualizaPedido()">
+    <ion-tab-button tab="tab3">
       <ion-icon [src]="carrinho"></ion-icon>
       <ion-label>Carrinho</ion-label>
     </ion-tab-button>
