--- a/src/app/pagamento/pagamento.page.html
+++ b/src/app/pagamento/pagamento.page.html
@@ -34,7 +34,7 @@
 
   <ion-item class="input">
     <ion-label color="none"><ion-icon name="add" ></ion-icon> Adicionar cliente : </ion-label>
-    <ion-input (ionChange)="nome($event)" type="text" name="cliente" 	maxlength="19" clearInput></ion-input>
+    <ion-input (ionChange)="nome($event)" type="text" name="cliente" 	maxlength="19" clearInput autofocus></ion-input>
   </ion-item>
 
   <ion-item lines="full" class="entrega">
