--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -11,25 +11,147 @@
     <ion-refresher-content></ion-refresher-content>
   </ion-refresher>
 
-  <ion-list>
-    <ion-item lines="full"  *ngFor="let p of produtos" (click)="adicionaItem(p.idProduto, p.nome)">
-
-      <ion-item >
-
-        <ion-thumbnail slot="start">
-          <img class="imagemProduto" [src]="p.imagem"/>
-        </ion-thumbnail>
-
-        <ion-label>
-          <div>
-            <h1>{{p.nome}}</h1>
-            <p>{{p.descricao}}</p>
-            <p>R$ {{p.valor}}</p>
-          </div>
-        </ion-label>
-
+  <ion-accordion-group>
+    <ion-accordion value="combos">
+      <ion-item slot="header">
+        <ion-label>Combos</ion-label>
       </ion-item>
 
-    </ion-item>
-  </ion-list>
+      <ion-list slot="content">
+         <ion-item lines="full"  *ngFor="let c of combo" (click)="adicionaItem(c.idProduto, c.nome)">
+
+          <ion-item >
+            <ion-thumbnail slot="start">
+              <img class="imagemProduto" [src]="c.imagem"/>
+            </ion-thumbnail>
+
+            <ion-label>
+              <div>
+                <h1>{{c.nome}}</h1>
+                <p>{{c.descricao}}</p>
+                <p>R$ {{c.valor}}</p>
+              </div>
+            </ion-label>
+          </ion-item>
+        </ion-item>
+      </ion-list>
+    </ion-accordion>
+
+    <ion-accordion value="Individuais">
+      <ion-item slot="header">
+        <ion-label>Individuais</ion-label>
+      </ion-item>
+      <ion-list slot="content">
+        <ion-item lines="full"  *ngFor="let i of individuais" (click)="adicionaItem(i.idProduto, i.nome)">
+          <ion-item>
+            <ion-thumbnail slot="start">
+              <img class="imagemProduto" [src]="i.imagem"/>
+            </ion-thumbnail>
+
+            <ion-label>
+              <div>
+                <h1>{{i.nome}}</h1>
+                <p>{{i.descricao}}</p>
+                <p>R$ {{i.valor}}</p>
+              </div>
+            </ion-label>
+          </ion-item>
+        </ion-item>
+      </ion-list>
+    </ion-accordion>
+
+    <ion-accordion value="Batatas">
+      <ion-item slot="header">
+        <ion-label>Batatas</ion-label>
+      </ion-item>
+      <ion-list slot="content">
+        <ion-item lines="full"  *ngFor="let b of batatas" (click)="adicionaItem(b.idProduto, b.nome)">
+          <ion-item>
+            <ion-thumbnail slot="start">
+              <img class="imagemProduto" [src]="b.imagem"/>
+            </ion-thumbnail>
+
+            <ion-label>
+              <div>
+                <h1>{{b.nome}}</h1>
+                <p>{{b.descricao}}</p>
+                <p>R$ {{b.valor}}</p>
+              </div>
+            </ion-label>
+          </ion-item>
+        </ion-item>
+      </ion-list>
+    </ion-accordion>
+
+    <ion-accordion value="Refrigerantes">
+      <ion-item slot="header">
+        <ion-label>Refrigerantes</ion-label>
+      </ion-item>
+      <ion-list slot="content">
+        <ion-item lines="full" *ngFor="let r of refrigerantes" (click)="adicionaItem(r.idProduto, r.nome)">
+          <ion-item>
+
+            <ion-thumbnail slot="start">
+              <img class="imagemProduto" [src]="r.imagem"/>
+            </ion-thumbnail>
+
+            <ion-label>
+              <div>
+                <h1>{{r.nome}}</h1>
+                <p>{{r.descricao}}</p>
+                <p>R$ {{r.valor}}</p>
+              </div>
+            </ion-label>
+          </ion-item>
+        </ion-item>
+      </ion-list>
+    </ion-accordion>
+
+    <ion-accordion value="Adicionais">
+      <ion-item slot="header">
+        <ion-label>Adicionais</ion-label>
+      </ion-item>
+      <ion-list slot="content">
+        <ion-item lines="full"  *ngFor="let a of adicionais" (click)="adicionaItem(a.idProduto, a.nome)">
+          <ion-item>
+            <ion-thumbnail slot="start">
+              <img class="imagemProduto" [src]="a.imagem"/>
+            </ion-thumbnail>
+
+            <ion-label>
+              <div>
+                <h1>{{a.nome}}</h1>
+                <p>{{a.descricao}}</p>
+                <p>R$ {{a.valor}}</p>
+              </div>
+            </ion-label>
+          </ion-item>
+        </ion-item>
+      </ion-list>
+    </ion-accordion>
+
+    <ion-accordion value="Entregas">
+      <ion-item slot="header">
+        <ion-label>Entregas</ion-label>
+      </ion-item>
+      <ion-list slot="content">
+        <ion-item lines="full"  *ngFor="let e of entregas" (click)="adicionaItem(e.idProduto, e.nome)">
+          <ion-item>
+            <ion-thumbnail slot="start">
+              <img class="imagemProduto" [src]="e.imagem"/>
+            </ion-thumbnail>
+
+            <ion-label>
+              <div>
+                <h1>{{e.nome}}</h1>
+                <p>{{e.descricao}}</p>
+                <p>R$ {{e.valor}}</p>
+              </div>
+            </ion-label>
+          </ion-item>
+        </ion-item>
+      </ion-list>
+    </ion-accordion>
+  </ion-accordion-group>
 </ion-content>
+
