--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -14,24 +14,22 @@
 
 
 
+  <ion-label *ngFor="let t of teste">
 
-  <ion-list>
-    <ion-item color="success" >
-      {{dia}}
-    </ion-item>
+    <ion-item color="success" size="large"> {{t[0]}}</ion-item>
 
-    <ion-item lines="full" *ngFor="let pe of pedido" (click)="abrirModal(pe.codPedido, pe.valor, pe.cliente, pe.tipo, pe.dataPedido)">
+    <ion-item *ngFor="let y of t" (click)="abrirModal(y.codPedido, y.valor, y.cliente, y.tipo, y.dataPedido)" >
 
-      <ion-item lines="none">
-        {{pe.cliente}}
-      </ion-item>
+      {{y.cliente}}
 
-      <ion-item lines="none" slot="end">
-        # {{pe.codPedido}}
-      </ion-item>
+        <ion-item lines="none" slot="end" >
+          # {{y.codPedido}}
+        </ion-item>
 
     </ion-item>
-  </ion-list>
+
+  </ion-label>
+
 
 </ion-content>
 
