--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -159,7 +159,7 @@
       </ion-list>
     </ion-accordion>
 
-    <ion-accordion value="Entregas">
+    <!-- <ion-accordion value="Entregas">
 
       <ion-item slot="header">
         <ion-icon class="size" name="bicycle-outline"></ion-icon>
@@ -182,7 +182,7 @@
           </ion-item>
         </ion-item>
       </ion-list>
-    </ion-accordion>
+    </ion-accordion> -->
 
 
   </ion-accordion-group>
