--- a/src/app/modal/modal.page.html
+++ b/src/app/modal/modal.page.html
@@ -37,7 +37,6 @@
             {{li.nome}}
           </ion-col>
 
-
           <ion-col size="2" class="colun">
             x {{li.quantidade}}
           </ion-col>
@@ -51,8 +50,9 @@
   </ion-list>
 
 </ion-content>
+<ion-item><h4>Entrega: </h4><h5 slot="end">{{bairro}} - {{valEnt}}</h5></ion-item>
 
-<ion-item><h2>Total: </h2><h3 slot="end">R$ {{total}}</h3></ion-item>
+<ion-item><h2>Total: </h2><h3 slot="end">{{total | currency: 'BRL'}}</h3></ion-item>
 
 <ion-footer>
 
