--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -32,7 +32,7 @@
   --ion-color-success-rgb: 45, 211, 111;
   --ion-color-success-contrast: #ffffff;
   --ion-color-success-contrast-rgb: 255, 255, 255;
-  --ion-color-success-shade: #28ba62;
+  --ion-color-success-shade: #2ed1ac; //#28ba62;
   --ion-color-success-tint: #42d77d;
 
   /** warning **/
