--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -54,5 +54,5 @@
   <ion-button color="danger" expand="full" tab="tab1" (click)="verifica()">CANCELAR PEDIDO</ion-button>
 </ion-content>
 
-
-
+<ion-footer>
+</ion-footer>
